--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,17 +32,17 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: sh -c "sleep 3 && python3 manage.py migrate && python3 manage.py runserver 127.0.0.1:8000"
+    command: sh -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 127.0.0.1:8000"
 
-  celery:
-    build: .
-    tty: true
-    env_file:
-      - .env
-    command: sh -c "sleep 5 && celery -A config worker -l INFO"
-    depends_on:
-        - redis
-        - app
+#  celery:
+#    build: .
+#    tty: true
+#    env_file:
+#      - .env
+#    command: sh -c "sleep 5 && celery -A config worker -l INFO"
+#    depends_on:
+#        - redis
+#        - app
 
 #  celery_beat:
 #    build: .
